# countries

./: .gitignore  Cargo.toml
app/: app.js  index.html  package-lock.json  package.json  style.css
data/: countries.csv
src/: lib.rs  main.rs  models.rs
