[package]
name = "countries"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "^0.12.7"
polars = { version = "^0.42.0", features = ["lazy", "serde"] }
serde = "1.0.209"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde_json = "1.0.127"
actix-web = "4.9.0"
actix-cors = "0.7.0"
